--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 bleach==2.1.2
-certifi==2018.1.18
+certifi==2018.4.16
+chardet==3.0.4
 colorama==0.3.9
 cycler==0.10.0
+deap==1.2.2
 decorator==4.2.1
 entrypoints==0.2.3
 html5lib==1.0.1
+idna==2.6
 ipython==6.2.1
 ipython-genutils==0.2.0
 jedi==0.11.1
@@ -17,26 +20,39 @@ matplotlib==2.1.2
 mistune==0.8.3
 nbconvert==5.3.1
 nbformat==4.4.0
-notebook==5.3.1
+notebook==5.5.0
 numpy==1.14.0
 pandas==0.22.0
 pandocfilters==1.4.2
 parso==0.1.1
+patsy==0.5.0
 pickleshare==0.7.4
 prompt-toolkit==1.0.15
 Pygments==2.2.0
 pyparsing==2.2.0
 python-dateutil==2.6.1
 pytz==2017.3
-pyzmq==16.0.3
+pywinpty==0.5.4
+pyzmq==17.0.0
+requests==2.18.4
 scikit-learn==0.19.1
+scikit-MDR==0.4.4
 scipy==1.0.0
+seaborn==0.8.1
 Send2Trash==1.4.2
 simplegeneric==0.8.1
 six==1.11.0
+skrebate==0.6
+statsmodels==0.9.0
+stopit==1.1.2
+terminado==0.8.1
 testpath==0.3.1
 tornado==4.5.3
+TPOT==0.9.3
+tqdm==4.23.4
 traitlets==4.3.2
+update-checker==0.16
+urllib3==1.22
 wcwidth==0.1.7
 webencodings==0.5.1
 wincertstore==0.2
